--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -97,10 +97,10 @@
                         <a class="nav-link" href="{{ url_for('main.upload_page') }}">上传数据</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.results_page') }}">分析结果</a>
+                        <a class="nav-link" href="{{ url_for('main.results') }}">分析结果</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.results_page') }}">下载报告</a> 
+                        <a class="nav-link" href="{{ url_for('main.results') }}">下载报告</a> 
                     </li> 
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.upload_page') }}">重新上传</a>
@@ -177,13 +177,13 @@
                             </thead>
                             <tbody>
                                 <tr v-for="(item, index) in paginatedData" :key="index">
-                                    <td>{{ item.variant.Chromosome || 'chrN/A' }}</td>
-                                    <td>{{ item.variant.Start || '-' }}</td>
-                                    <td class="text-monospace">{{ item.variant.Reference || '-' }}</td>
-                                    <td class="text-monospace text-danger">{{ item.variant.Alternate || '-' }}</td>
+                                    <td>{{ item.variant.Chromosome or 'chrN/A' }}</td>
+                                    <td>{{ item.variant.Start or '-' }}</td>
+                                    <td class="text-monospace">{{ item.variant.Reference or '-' }}</td>
+                                    <td class="text-monospace text-danger">{{ item.variant.Alternate or '-' }}</td>
                                     <td>
                                         <span class="badge bg-info">
-                                        {{ item.clinvar.ClinicalSignificance || '未知' }}
+                                        {{ item.clinvar.ClinicalSignificance or '未知' }}
                                         </span>
                                     </td>
                                 </tr>
