--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -114,10 +114,10 @@
                         <a class="nav-link" href="{{ url_for('main.upload_page') }}">上传数据</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.results') }}">分析结果</a>
+                        <a class="nav-link" href="{{ url_for('main.results_page') }}">分析结果</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.results') }}">下载报告</a>
+                        <a class="nav-link" href="{{ url_for('main.results_page') }}">下载报告</a>
                     </li>
                 </ul>
             </div>
