修复clinvar图表展示

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,10 +6,10 @@
     <title>致病性变异预测系统</title> 
     
     <!-- 确保 favicon 路径正确 -->
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/static/favicon.ico">
 
-    <script type="module" crossorigin src="/assets/index-csdKqaeo.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-7s34v1YJ.css">
+    <script type="module" crossorigin src="/static/assets/index-csdKqaeo.js"></script>
+    <link rel="stylesheet" crossorigin href="/static/assets/index-7s34v1YJ.css">
   </head>
   <body>
     <!-- 确保只有一个 #app 元素 -->
